Fully implemented mmr badge pane, began working on top maps pane for player page

--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -59,6 +59,9 @@
                             </div>
                         </div>
                     {% endblock %}
+                    {% block advertising_horizontal_responsive_01 %}
+                        {% include ':snippets:advertising/responsive_horizontal_inner.html.twig' %}
+                    {% endblock %}
                 {% endembed %}
             </div>
             <div class="col-xl-2">
