--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -20,7 +20,14 @@
                             <div class="hotstatus-subcontainer margin-bottom-spacer-1">
                                 {% block player_summary %}{% endblock %}
                             </div>
+                            {# MMR PLAYERLOADER GENERATED #}
                             {# Top Heroes PLAYERLOADER GENERATED #}
+                        </div>
+                    </div>
+                    {# Left Pane MID #}
+                    <div class="player-leftpane-block">
+                        <div id="player-leftpane-mid-container" class="player-leftpane player-leftpane-mid-container">
+                            {# Parties PLAYERLOADER GENERATED #}
                         </div>
                     </div>
                     {# Left Pane BOT #}
@@ -47,6 +54,9 @@
     <div class="row">
         <div class="col">
             {# Bottom Row #}
+            <div class="text-center">
+                {% block advertising_horizontal_responsive_01 %}{% endblock %}
+            </div>
         </div>
     </div>
 </div>
