--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2352,3 +2352,100 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
 .margin-bottom-spacer-1 {
     margin-bottom: 10px!important;
 }
+
+.pl-mmr-container {
+    position: relative;
+    text-align: center;
+    height: 64px;
+    line-height: 64px;
+}
+
+.pl-mmr-badge {
+    display: inline-block;
+    margin: 0px 4px;
+    width:48px;
+    height:48px;
+}
+
+.pl-mmr-badge-gameTypeImage-container {
+    position: absolute;
+    margin: -20px -0.5px;
+    width:48px;
+    height:48px;
+    text-align: center;
+}
+
+.pl-mmr-badge-gameTypeImage {
+    position: relative;
+    width: 48px;
+    height: 48px;
+}
+
+.pl-mmr-badge-image-container {
+    position: absolute;
+    margin: -11px 0;
+    width:48px;
+    height:48px;
+}
+
+.pl-mmr-badge-image {
+    position: relative;
+    width: 48px;
+    height: 48px;
+}
+
+.pl-mmr-badge-tier-container {
+    position: absolute;
+    margin: 28px -1px;
+    width:48px;
+    height:24px;
+}
+
+.pl-mmr-badge-tier {
+    width:48px;
+    height:24px;
+    line-height:24px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+    cursor:default;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
+}
+
+.pl-mmr-badge-tooltip-area {
+    position: absolute;
+    width:48px;
+    height:48px;
+    cursor: help;
+}
+
+.pl-topmaps-mappane {
+    position:relative;
+    text-align: left;
+    width: 183px;
+    height: 32px;
+    padding: 5px 0;
+    text-wrap: none;
+    white-space: nowrap;
+}
+
+.pl-topmaps-mapbg {
+    position:absolute;
+    left:0;
+    top:0;
+    width:183px;
+    height:32px;
+    background-repeat: no-repeat;
+}
+
+.pl-topmaps-mapname {
+    position:absolute;
+    left:0;
+    top:0;
+    width:183px;
+    height:32px;
+    line-height: 32px;
+    font-size: 14px;
+    font-weight: 600;
+    color:#FFFFFF;
+}
