Began working on player page tabbing, in preperation for player hero page

--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -2,6 +2,9 @@
     <script src="{{ asset('build/player-loader.js') }}"></script>
 {% endblock %}
 
+<div class="player-tab-container">
+    test123
+</div>
 <div id="playerloader-container" class="initial-load container-fluid hotstatus-container">
     <div class="row">
         <div class="col">
