--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -4,6 +4,8 @@
 {% use ':snippets:stdassets.html.twig' with javascripts as stdjavascripts, stylesheets as stdstylesheets %}
 {% use ':snippets:players/playerloader.html.twig' with javascripts as playerloaderjavascripts %}
 
+{% set route = app.request.attributes.get('_route') %}
+
 {# Append to title #}
 {% block title %}
 : {{ player.name }}#{{ player.tag }}
@@ -34,6 +36,9 @@
             <div class="col-12 col-xl-8">
                 {% embed ':snippets:players/playerloader.html.twig' %}
                     {% block javascripts %}{% endblock %}
+                    {% block player_tab_index %}
+                        {% include ':snippets:players/player_tab_index.html.twig' %}
+                    {% endblock %}
                     {% block filter %}
                         <div>
                             {% include ':snippets:heroes/filter/dropdown/select/seasons.html.twig' %}
