--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2472,9 +2472,64 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     color: #5f5f5f;
 }
 
+.padding-top-5 {
+    padding-top: 5px;
+}
+
+.padding-top-7 {
+    padding-top: 7px;
+}
+
 .player-tab-container {
-    background-color: #c9302c;
+    position:relative;
+    padding: 0 8px;
+    width:100%;
+    height:32px;
+    margin-bottom: -2px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-wrap: none;
+    z-index: 2;
+}
+
+.player-tab {
+    display:inline-block;
+    background-color: rgba(46, 57, 59, 0.81);
+    height:100%;
+    border: 2px;
+    border-color: #1B0748;
+    border-style: solid;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin: 0 -4px;
+    padding: 2px 8px;
+    color:#FFFFFF;
+}
+
+.player-tab.tabselected {
+    border-bottom-color: #272e34; /* Transparency overlay computed */
+}
+
+.player-tablist-container {
     position:relative;
     width:100%;
-    height:28px;
+    margin-bottom: 0px;
+    overflow: hidden;
+}
+
+.player-tablist-item {
+    background-color: rgba(46, 57, 59, 0.81);
+    width:100%;
+    height:32px;
+    border: 2px;
+    border-color: #1B0748;
+    border-style: solid;
+    border-bottom: none;
+    margin: 0;
+    padding: 2px 8px;
+    color:#FFFFFF;
+}
+
+.player-tablist-item.tabselected {
+    background-color: rgba(82, 93, 95, 0.81);
 }
