--- a/app/Resources/views/snippets/players/player_heroloader.html.twig
+++ b/app/Resources/views/snippets/players/player_heroloader.html.twig
@@ -16,6 +16,9 @@
                     <div class="row">
                         <div class="col">
                             <div class="hotstatus-subcontainer">
+                                {% block player_summary %}{% endblock %}
+                            </div>
+                            <div class="hotstatus-subcontainer">
                                 <div id="hl-herodata-image-hero-composite-container" class="text-center">{# HEROLOADER GENERATED #}</div>
                             </div>
                         </div>
