--- a/app/Resources/views/snippets/rankings/rankingsloader.html.twig
+++ b/app/Resources/views/snippets/rankings/rankingsloader.html.twig
@@ -13,6 +13,9 @@
         <div class="col">
             <div class="row">
                 <div class="col text-center">
+                    <div class="w-100 text-left">
+                        <input id="rankings-search" class="hotstatus-search-textbox" placeholder="Search for Player...">
+                    </div>
                     <div id="rankings-middlepane" class="rankings-middlepane">
                         {# RANKINGS LOADER GENERATED #}
                     </div>
