Added initial versions of all static pages

--- a/app/Resources/views/default/faq.html.twig
+++ b/app/Resources/views/default/faq.html.twig
@@ -5,7 +5,7 @@
 
 {# Append to title #}
 {% block title %}
-: Contact
+: F.A.Q.
 {% endblock %}
 
 {# Inject dynamic content variables #}
@@ -32,19 +32,11 @@
                 <div class="hotstatus-container">
                     <div class="contact-container hotstatus-subcontainer">
                         <div>
-                            Email: <a class="email" href="mailto:contact@hotstat.us">contact@hotstat.us</a>!
+                            <h1>Frequently Asked Questions</h1>
                         </div>
                         <br>
                         <div>
-                            For general questions, please prefix the subject line with "<b>Question:</b>", if your questions are well formed and aren't answered in the <a class="link" href="{{ path("faq") }}">F.A.Q.</a> then they will be added! I will try to answer questions frequently.
-                        </div>
-                        <br>
-                        <div>
-                            For bug reports, please prefix the subject line with "<b>Bug Report:</b>", any amount of details are appreciated!
-                        </div>
-                        <br>
-                        <div>
-                            For non-obvious feature requests, please prefix the subject line with "<b>Feature Request:</b>".
+                            No questions have been asked yet, check out the <a class="link" href="{{ path("contact") }}">contact</a> page for information!
                         </div>
                     </div>
                 </div>
