--- a/app/Resources/views/snippets/advertising/responsive_horizontal_inner_flex.html.twig
+++ b/app/Resources/views/snippets/advertising/responsive_horizontal_inner_flex.html.twig
@@ -1,4 +1,4 @@
-<ins class="adsbygoogle adslot_horizontal adslot_horizontal_3 bg-danger"
+<ins class="adsbygoogle adslot_horizontal adslot_horizontal_3"
      data-ad-client="ca-pub-7109973858720398"
      data-ad-slot="2629560943"
      data-ad-format="horizontal"></ins>
