--- a/app/Resources/views/snippets/advertising/responsive_vertical.html.twig
+++ b/app/Resources/views/snippets/advertising/responsive_vertical.html.twig
@@ -1,4 +1,4 @@
-<ins class="adslot_vertical adslot_vertical_1 bg-danger"
+<ins class="adslot_vertical adslot_vertical_1"
      data-ad-client="ca-pub-7109973858720398"
      data-ad-slot="2629560943"
      data-ad-format="vertical"></ins>
