Tweaked statslist to further use the updated paradigm for datatable ajax requests

--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -63,3 +63,8 @@
     {{ block('hsljavascripts') }}
 {% endblock %}
 
+{# Tail Javascript #}
+{% block tailJavascript %}
+    Hotstatus.advertising.internal.generateByDefault = false;
+{% endblock %}
+
