Added cache update techniques

--- a/app/Resources/views/snippets/heroes/statslist.html.twig
+++ b/app/Resources/views/snippets/heroes/statslist.html.twig
@@ -20,7 +20,7 @@
             <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-rolebutton hsl-rolebutton" value="Assassin">Assassin</button>
         </div>
         <div id="heroes-statslist-toolbar-container-search" class="d-inline-block float-none">
-            <input id="heroes-statslist-toolbar-search" class="hotstatus-search-textbox" placeholder="Search by Hero/Role...">
+            <input id="heroes-statslist-toolbar-search" class="hotstatus-search-textbox" placeholder="Search by Hero/Role..."><div id="statslist-lastupdated" class="d-inline-block"></div>
         </div>
     </div>
     {# Heroes Statslist Generated #}
