--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2643,3 +2643,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     color: #8782ff;
     text-decoration: none;
 }
+
+.lastupdated-info {
+    color: #110723;
+}
