Added last updated timestamp to hero page

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2647,3 +2647,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
 .lastupdated-info {
     color: #110723;
 }
+
+.lastupdated-text {
+    color: #5f5f5f;
+}
