Changed contact template page

--- a/app/Resources/views/default/contact.html.twig
+++ b/app/Resources/views/default/contact.html.twig
@@ -44,7 +44,7 @@
                         </div>
                         <br>
                         <div>
-                            For non-obvious feature requests, please prefix the subject line with "<b>Feature Request:</b>".
+                            For feature requests, please prefix the subject line with "<b>Feature Request:</b>".
                         </div>
                     </div>
                 </div>
