--- a/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/maps.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/maps.html.twig
@@ -3,8 +3,8 @@
         data-select-all-text="<i class='fa fa-check-square-o fa-2x' style='' aria-hidden='true'></i>" multiple>
     {% for key, map in filter_maps %}
         <option {% if map.selected == true %}selected="selected"{% endif %}
-                title="<img class='filter-dropdown-image-map filter-dropdown-image-map-title' src='{{ asset('ui/map_icon_'~map.name_sort~'.png', 'images') }}'>"
-                data-content="<img class='filter-dropdown-image-map filter-dropdown-image-margin-right-8' src='{{ asset('ui/map_icon_'~map.name_sort~'.png', 'images') }}'>{{ key }}"
+                title="<img class='filter-dropdown-image-map filter-dropdown-image-map-title' src='{{ asset('/ui/map_icon_'~map.name_sort~'.png', 'images') }}'>"
+                data-content="<img class='filter-dropdown-image-map filter-dropdown-image-margin-right-8' src='{{ asset('/ui/map_icon_'~map.name_sort~'.png', 'images') }}'>{{ key }}"
                 value="{{ key }}">{{ key }}</option>
     {% endfor %}
 </select>
