--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -3,7 +3,7 @@
 
 <nav id="hotstatus-navbar" class="navbar nav-pills navbar-expand-md navbar-dark bg-secondary">
     <div class="container-fluid">
-    <a class="navbar-brand" href="{{ path('homepage') }}"><img src="{{ asset('ui/logo.png', 'images') }}" width="140" height="45"></a>
+    <a class="navbar-brand" href="{{ path('homepage') }}"><img src="{{ asset('/ui/logo.png', 'images') }}" width="140" height="45"></a>
     <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
