--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2670,3 +2670,14 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
 .topheroes-inline-winrate {
     margin: 0 4px;
 }
+
+.bs-searchbox > input {
+    background-color: #444652!important;
+    color: #FFFFFF!important;
+    border: 1px!important;
+    border-radius: 4px!important;
+    border-style: solid!important;
+    border-color: #10042B!important;
+    padding: 4px 8px!important;
+    margin: 2px 4px!important;
+}
